remote/argocd/fiducia/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fiducia
  labels:
    app.kubernetes.io/part-of: fiducia
