remote/argocd/fiducia/fiducia-admin.required-secrets.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fiducia-admin
  namespace: fiducia
spec:
  template:
    spec:
      containers:
        - name: fiducia-admin
