remote/argocd/fiducia/fiducia-backend.required-secrets.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fiducia-backend
  namespace: fiducia
spec:
  template:
    spec:
      containers:
        - name: fiducia-backend
