remote/argocd/fiducia/fiducia-brain.required-secrets.patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: fiducia-brain
  namespace: fiducia
spec:
  template:
    spec:
      containers:
        - name: fiducia-brain
        - name: fiducia-brain-sidecar
