remote/argocd/fiducia/fiducia-node.required-secrets.patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: fiducia-node
  namespace: fiducia
spec:
  template:
    spec:
      containers:
        - name: fiducia-node
        - name: fiducia-node-sidecar
