remote/argocd/fiducia/fiducia-load-balance-tls.service.patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: fiducia-load-balance
  namespace: fiducia
spec:
  ports:
    - name: https
      port: 8443
      targetPort: https
      protocol: TCP
